- Bumped the engine version to v0.60.0 and refreshed the analysis notes with new focus areas.
- Cached Raylib viewport fit data and reused it during sprite draws to remove the remaining atlas clipping regressions.
- Synced SDL3 context dimensions with the renderer output so menu layouts stay centered after window resizes.
- Added a configurable `--menu-columns` cap for the main overlay grid and documented the runtime flag.
- Bumped the engine version to v0.61.0 and updated the engine analysis focus areas.
- Wired the CLI `--update` command into the modular updater flow, requiring `--force` to install builds, and bumped the engine version to v0.62.0.
- Ensured updater download failures print diagnostics on a fresh line, documented the release, and bumped the engine version to v0.62.1.
- Documented that forced updater runs rehydrate the AlmondShell source tree, added Windows 11 guidance for running uncertified builds, and refreshed the README accordingly.
- Seeded Raylib's viewport metrics during resize dispatch so atlas menus stay centred from the very first frame, documented the release, and bumped the engine version to v0.62.2.
- Added a scissor pass to Raylib's fitted viewport so GUI sprites stay clipped, made the software renderer cleanup idempotent to stop duplicate shutdown logs, documented the release, and bumped the engine version to v0.62.3.
- Re-seeded Raylib's fitted viewport from the live framebuffer during context creation so GUI overlays align before docking completes, documented the change, and bumped the engine version to v0.62.4.
- Cached Raylib's bootstrapped WGL handles and gated context reacquisition so standalone Raylib sessions can make the GL context current reliably, documented the change, and bumped the engine version to v0.62.5.
- Documented the child-window scaling alignment and context refresh smoke coverage for Raylib, ensuring docked panes keep the design canvas while contexts rebound, and bumped the engine version to v0.62.6.
